--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{   
   "name": "backend-working",
   "version": "1.0.0",
   "description": "",
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
